# robot

./: CNAME  index.html  params.json
CmdMessenger/: _8ycm__extra__conf_8py.html  _c_make_c_x_x_compiler_id_8cpp.html  _cmd_8h.html  _cmd_8h_source.html  _cmd_base_8cpp.html  _cmd_base_8cpp_source.html  _cmd_base_8h.html  _cmd_base_8h_source.html  _cmd_messenger_8cpp.html  _cmd_messenger_8cpp_source.html  _cmd_messenger_8h.html  _cmd_messenger_8h_source.html  _cmd_received_8cpp.html  _cmd_received_8cpp_source.html  _cmd_received_8h.html  _cmd_received_8h_source.html  _cmd_send_8cpp.html  _cmd_send_8cpp_source.html  _cmd_send_8h.html  _cmd_send_8h_source.html  annotated.html  callback_8h.html  callback_8h_source.html  class_c_b_function_translator0.html  class_c_b_function_translator0w_ret.html  class_c_b_function_translator1.html  class_c_b_function_translator1w_ret.html  class_c_b_function_translator2.html  class_c_b_function_translator2w_ret.html  class_c_b_function_translator3.html  class_c_b_function_translator3w_ret.html  class_c_b_function_translator4.html  class_c_b_function_translator4w_ret.html  class_c_b_functor0.html  class_c_b_functor0w_ret.html  class_c_b_functor1.html  class_c_b_functor1w_ret.html  class_c_b_functor2.html  class_c_b_functor2w_ret.html  class_c_b_functor3.html  (+92 more)
CmdMessenger/search/: all_10.js  all_2.js  all_3.js  all_9.js  all_b.js  all_d.js  classes_0.js  classes_1.js  enumvalues_0.js  (+10 more)
_posts/: 2014-07-24-hello-world.md
cmdMessenger-cpp/: .gitignore  CMakeLists.txt  cmdMessenger-cpp.prj  load
cmdMessenger-cpp/doc/: Doxyfile  main.dox  script.sh
cmdMessenger-cpp/doc/html/: _c_make_c_compiler_id_8c.html  _cmd_base_8h_source.html  _cmd_messenger_8cpp.html  _cmd_messenger_8h_source.html  _cmd_received_8cpp.html  _cmd_received_8h.html  _cmd_received_8h_source.html  _cmd_send_8cpp.html  annotated.html  class_cmd_base.html  class_cmd_end.html  class_cmd_received.html  classcallback.html  classcmd_1_1_cmd.html  classcmd_1_1_cmd_end.html  classcmd_1_1_cmd_messenger.html  classcmd_1_1_cmd_received.html  classcmd_1_1_cmd_send.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fc32d972b4b6fe81e0b1ebec7f771c17.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  globals_vars.html  hello_8cpp.html  hierarchy.html  index.html  led_8cpp.html  main_8dox.html  namespacecmd.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  (+7 more)
cmdMessenger-cpp/doc/html/search/: all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_0.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  search.js  variables_1.js  variables_3.js
cmdMessenger-cpp/doc/latex/: _cmd_base_8cpp.tex  _cmd_base_8h.tex  _cmd_messenger_8cpp.tex  _cmd_messenger_8h.tex  _cmd_received_8cpp.tex  _cmd_received_8h.tex  _cmd_send_8cpp.tex  _cmd_send_8h.tex  _serial_transport_8h.tex  _transport_layer_8h.tex  annotated.tex  callback_8h.tex  class_c_b_function_translator0.tex  class_c_b_function_translator0w_ret.tex  class_c_b_function_translator1.tex  class_c_b_function_translator1w_ret.tex  class_c_b_function_translator2.tex  class_c_b_function_translator2w_ret.tex  class_c_b_function_translator3.tex  class_c_b_function_translator3w_ret.tex  class_c_b_function_translator4.tex  class_c_b_function_translator4w_ret.tex  class_c_b_functor0.tex  class_c_b_functor0w_ret.tex  class_c_b_functor1.tex  class_c_b_functor1w_ret.tex  class_c_b_functor2.tex  class_c_b_functor2w_ret.tex  class_c_b_functor3.tex  class_c_b_functor3w_ret.tex  class_c_b_functor4.tex  class_c_b_functor4w_ret.tex  class_c_b_functor_base.tex  class_c_b_functor_base_1_1_dummy_init.tex  class_c_b_member_of1st_arg_translator1.tex  class_c_b_member_of1st_arg_translator1w_ret.tex  class_c_b_member_of1st_arg_translator2.tex  class_c_b_member_of1st_arg_translator2w_ret.tex  class_c_b_member_of1st_arg_translator3.tex  class_c_b_member_of1st_arg_translator3w_ret.tex  (+36 more)
cmdMessenger-cpp/include/: CmdBase.h  CmdMessenger.h  CmdReceived.h  CmdSend.h  tokenizer.h
cmdMessenger-cpp/src/: CmdMessenger.cpp  led.cpp  teste.cpp
cmdMessenger-cpp/src/examples/: led.cpp
ros_ws/src/arduino1_driver/: .ycm_extra_conf.py  CMakeLists.txt  arduino.prj  arduino1_driver.prj  package.xml
ros_ws/src/arduino1_driver/include/arduino1_driver/: ArduinoDriver.h  arduino1_driver.h
ros_ws/src/arduino1_driver/src/: .arduino1_driver_node.cpp.swp  arduino1_driver_node.cpp  arduino_driver.cpp
ros_ws/src/arduino1_driver/src/arduino1_driver/: ArduinoDriver.cpp
ros_ws/src/arm/: .ycm_extra_conf.py  CMakeLists.txt  arm.launch  arm.project  leia-me  package.xml
ros_ws/src/arm/include/arm/: limiter.hpp  serial.hpp  tracker.hpp
ros_ws/src/arm/msg/: coordinates.msg
ros_ws/src/arm/src/: .grabber.cpp.swp  backup  grabber.cpp  limiter.cpp  limiter_node1.cpp  serial.cpp  smart.cpp  tracker.cpp  tracker_node.cpp  window.cpp  windowT.cpp  window_tracking.cpp
ros_ws/src/kinect_driver/: .ycm_extra_conf.py  CMakeLists.txt  kinect_driver.prj  package.xml
ros_ws/src/kinect_driver/include/kinect_driver/: bgr_driver.h  driver.h  gray_driver.h  kinect_driver.h
ros_ws/src/kinect_driver/src/: bgr_driver_node.cpp  depth_generator.cpp  depth_map_driver_node.cpp  gray_driver_node.cpp  image_generator.cpp  valid_mask_driver_node.cpp
ros_ws/src/kinect_driver/src/kinect_driver/: bgr_driver.cpp  driver.cpp  gray_driver.cpp  kinect_driver.cpp
ros_ws/src/obstacle_avoidance/: .ycm_extra_conf.py  CMakeLists.txt  obstacle_avoidance.prj  package.xml
ros_ws/src/obstacle_avoidance/include/obstacle_avoidance/: obstacle_detector.h
ros_ws/src/obstacle_avoidance/msg/: Detection.msg
ros_ws/src/obstacle_avoidance/src/: obstacle_detector_node.cpp
ros_ws/src/obstacle_avoidance/src/obstacle_avoidance/: obstacle_detector.cpp
(+31 files in other folders)
