<?xml version="1.0"?>
<package>
  <name>arduino1_driver</name>
  <version>0.0.1</version>
  <description>
      This package provides the robotic platform with ultrassonic and encoder sensor 
      data and motor actuator.
  </description>

  <maintainer email="edno-moura@mail.com">fco-edno</maintainer>

  <license>
      The MIT License
      Copyright (c) Francisco Edno de Moura Rodrigues Filho
  </license>

  <url type="website">http://fco-edno.github.io/robot/</url>


  <author email="edno-moura@mail.com">Francisco Edno</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
